<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.files.list.FileListFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_file_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_file_title"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_file_form_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_file_title_tv">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/file_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file_name_field_hint"
                android:inputType="textFilter"
                android:maxLength="20"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/file_content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file_content_field_hint"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLength="120" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_file_mb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_file_mb" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_field_mb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_200"
                android:text="@string/clear_fields_mb" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/file_list_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/file_list_title"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_file_form_cv" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_list_title_tv">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/file_list_empty_message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/file_list_empty_message" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/file_list_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>